Changed link for google_rss

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	</ul>   
 	<h2>Programming</h2>
 	<ul class="urls">
-	    <li><a href="google_rss/" title="python script to make an rss feed for googlebot">GoogleBot RSS feed script</a></li>
+	    <li><a href="https://github.com/bluegray/floatinginspace.za.org/google_rss/" title="python script to make an rss feed for googlebot">GoogleBot RSS feed script</a></li>
 	    <li><a href="facebook_status/" title="python script to change your Facebook status message">Facebook status message script</a></li>
 	</ul>      
 	<h2>music</h2>
