--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
 
         <footer>
           floatinginspace.za.org is maintained by <a href="https://github.com/bluegray">bluegray</a><br>
-          This page was based on a template by <a href="http://pages.github.com">GitHub Pages</a>. Tactile theme by <a href="http://twitter.com/jasonlong">Jason Long</a>.
+          This page is using the Tactile theme by <a href="http://twitter.com/jasonlong">Jason Long</a>.
         </footer>
 
       </div>
